# IllustratedPrimer

./: .env.example  .eslintconfig  .gitignore  Cargo.toml  Makefile  README.md  TestStories.md  auth.ts  go.mod  go.sum  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  speech-to-text.js  tailwind.config.ts  tsconfig.json
.claude/agents/: api-test-agent.md  go-agent.md  tui-agent.md
.devcontainer/: Dockerfile  devcontainer.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/story/: page.tsx
cmd/primer/: main.go
components/: ChatInterface.tsx  Header.tsx  SessionInfo.tsx  SignIn.tsx  StoriesSidebar.tsx
docs/: ARCHITECTURE.md  GETTING_STARTED.md  PERFORMANCE.md  RUST_README.md
docs/archive/: E_INK_DESIGN_NOTES.md  NEXTJS_SCHEMA.md  TEST_STORY_PROMPTS.md
hooks/: useStory.ts
illustrated-primer/: README.md  fly.toml  package-lock.json  package.json  remix.config.js  tailwind.config.js  tsconfig.json
illustrated-primer-server/: package-lock.json  package.json
illustrated-primer-ui/: README.md  package-lock.json  package.json
internal/ai/: CLAUDE.md  (+4 more)
migrations/: 001_init.sql
rust-tui/: .gitignore
seed/: README.md  pages.json  stories.json  users.json
server/: .env.example  .gitignore  ecosystem.config.js  index.ts  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.ts  ai_util.ts  main.rs
testutil/: database.go  mock_ai.go
types/: story.ts
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
(+144 files in other folders)
