[package]
name = "illustrated_primer_tui"
version = "0.1.0"
edition = "2021"
authors = ["Illustrated Primer Team"]
description = "Terminal UI for AI-powered interactive learning stories"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
async-openai = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
ratatui = "0.29"
crossterm = "0.28"
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
textwrap = "0.16"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
